--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,14 @@ Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
 Flask-Caching==2.1.0
 Flask-CORS==4.0.0
+Flask-JWT-Extended==4.6.0
+Flask-Bcrypt==1.0.1
 SQLAlchemy>=2.0.36
 scikit-learn>=1.3.0
 pandas>=2.0.0
 numpy>=1.24.0
 joblib>=1.3.0
+pytest>=7.4.0
+pytest-flask>=1.3.0
+pytest-cov>=4.1.0
+jsonschema>=4.20.0
