--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
-Flask==3.0.0
-Flask-SQLAlchemy==3.1.1
-Flask-Migrate==4.0.5
-Flask-Caching==2.1.0
-Flask-CORS==4.0.0
-Flask-JWT-Extended==4.6.0
-Flask-Bcrypt==1.0.1
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.6
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+pydantic==2.5.3
+pydantic-settings==2.1.0
 SQLAlchemy>=2.0.36
+alembic==1.13.1
+aiocache==0.12.2
 scikit-learn>=1.3.0
 pandas>=2.0.0
 numpy>=1.24.0
 joblib>=1.3.0
 pytest>=7.4.0
-pytest-flask>=1.3.0
+pytest-asyncio>=0.23.0
 pytest-cov>=4.1.0
+httpx>=0.26.0
 jsonschema>=4.20.0
-gunicorn>=21.2.0
